[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-otelbox"
version = "0.1.0"
description = "One-command OpenTelemetry collector + dashboards bundle"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "ops", "otelbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/otelbox"

[project.scripts]
otelbox = "otelbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["otelbox"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]
